# EdgeDetectionViewer-Android-App

./: .gitignore  README.md  Readme.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  EdgeDetector.cpp  EdgeDetector.h  GLRenderer.cpp  GLRenderer.h  native-lib.cpp
app/src/main/java/com/edgedetection/viewer/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
